--- a/index.html
+++ b/index.html
@@ -3,46 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Samara Bastos de Almeidat</title>
+    <style>
+
+
+
+    </style>
 </head>
 <body>
   <h1>Samara Bastos de Almeida</h1>
+
   <img src="/Minha foto.jpeg" width="150px" alt="Foto de Samara">
 
-  
-  
-  <p><a href="https://www.instagram.com/samarabbastos/" target="_blank"> Meu instagram</a></p>
+  <p>Tenho 26 anos, sou casada, nao tenho filhos,<br> sou de São Gonçalo, Rio de Janeiro.</p>
 
-  <p>Tenho 26 anos, sou casada, nao tenho filhos,sou de São Gonçalo, Rio de Janeiro</p>
-
-    
-  
-  
   <h2>Índice</h2>
    
-  <u>
+  <ul>
    <li> <a href="#Habilidades"> Habilidades</a></li>
    <li> <a href="#Formação">Formação Acadêmica</a></li>  
+   <li><a href="#hard">HardSkills</a></li>
    <li> <a href="#Informações"> Informações Adicionais</a></li>
-  </u>
+  </ul>
 
-  
+  <a href="https://www.instagram.com/samarabbastos/" target="_blank" >Meu instagram</a>
+
+
   <h2 id="Habilidades">Habilidades</h2>
 
-  <ul>
-      <li>Inovadação e criatividade</li>
-      <li>Empatia;</li>
-      <li>Foco em resultados</li>
-      <li>Flexibilidade e capacidade de se adaptar a mudanças</li>
-  </ul>
+  
+    <p>Inovadação e criatividade <br>
+      Empatia <br>
+      Foco em resultados <br>
+      Flexibilidade e capacidade de se adaptar a mudanças</p> 
+ 
 
     <h2 id="Formação">Formação Acadêmica</h2>
 
     <p><b>Universidade Estácio de Sá 2015-2019</b></p>
      <p>Bacharel em Administração de empresas</p> 
-   
+     <p><b>Universidade Estácio de Sá - 2021</b></p>
+     <p>Análise e Desenvolvimento de Sistemas(Em curso)</p>
 
-    <p><b>Universidade Estácio de Sá - 2021</b></p>
-      <p>Análise e Desenvolvimento de Sistemas(Em curso)</p>
+     <h2 id="hard">HardSkills</h2>
+
+
+      <p>Git e GitHub <br> HTML <br> CSS </p>
+
+    
 
      <h2 id="Informações">Informações Adicionais</h2>
 
