--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Samara Bastos de Almeidat</title>
+    <title>Samara Bastos de Almeida</title>
     <style>
 
+  h1{
+    font-family: sans-serif;
+  }
+
+  #descrição{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  body{
+    background-color: #9C528B;
+  }
+
+  .lista {
+    font-size: 20px
+  }
+   
+  .lista1 {
+    font-size: 22px
+  }
+
+  lista2{
+    font-size: 26px
+  }
+  .lista3{
+    font-size: 16px
+  }
 
 
     </style>
@@ -14,7 +40,7 @@
 
   <img src="/Minha foto.jpeg" width="150px" alt="Foto de Samara">
 
-  <p>Tenho 26 anos, sou casada, nao tenho filhos,<br> sou de São Gonçalo, Rio de Janeiro.</p>
+  <p id="descrição">Tenho 26 anos, sou casada, nao tenho filhos,<br> sou de <strong>São Gonçalo, Rio de Janeiro.</strong> </p>
 
   <h2>Índice</h2>
    
@@ -30,12 +56,13 @@
 
   <h2 id="Habilidades">Habilidades</h2>
 
+  <ul>
+    <li  class="lista">Inovadação e criatividade </li>
+    <li class="lista4" >Empatia</li>
+    <li class="lista3">Foco em resultados</li>
+    <li class="lista2" >Flexibilidade e capacidade de se adaptar a mudanças</li>
+  </ul>
   
-    <p>Inovadação e criatividade <br>
-      Empatia <br>
-      Foco em resultados <br>
-      Flexibilidade e capacidade de se adaptar a mudanças</p> 
- 
 
     <h2 id="Formação">Formação Acadêmica</h2>
 
