--- a/index.html
+++ b/index.html
@@ -3,42 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Samara Bastos de Almeida</title>
-    <style>
-
-  h1{
-    font-family: sans-serif;
-  }
-
-  #descrição{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-
-  body{
-    background-color: #9C528B;
-  }
-
-  .lista {
-    font-size: 20px
-  }
-   
-  .lista1 {
-    font-size: 22px
-  }
-
-  lista2{
-    font-size: 26px
-  }
-  .lista3{
-    font-size: 16px
-  }
-
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Samara Bastos de Almeida</h1>
+  <h1 class="meunome">Samara Bastos de Almeida</h1>
 
-  <img src="/Minha foto.jpeg" width="150px" alt="Foto de Samara">
+  <img src="/Minha foto.jpeg" width="190px" alt="Foto de Samara" id="minha-foto">
 
   <p id="descrição">Tenho 26 anos, sou casada, nao tenho filhos,<br> sou de <strong>São Gonçalo, Rio de Janeiro.</strong> </p>
 
